css/style.css
/* ... */
.b-from-left{
	position:relative;
	left:-100%;
	    color: #F67777;
    font-size: 2em;
    text-transform: uppercase;
    font-family: 'Ubuntu-Bold';
}
.b-animate-go:hover .b-from-left{
	left:0;
}
.b-from-right{
	position:relative;
	right:-100%;
	    color: #fff;
    font-size: 1.1em;
    text-transform: uppercase;
    font-family: 'Oxygen-Bold';
}
.b-animate-go:hover .b-from-right{
	right:0;
}
 label.b-from-right {
    width: 100px;
    height: 2px;
    display: block;
    background: #fff;
    border-radius: 10px;
    margin: 0.5em auto;
}

.b-scale{
	position:relative;
	transform:scale(0);
	-moz-transform:scale(0);
	-ms-transform:scale(0);
	-o-transform:scale(0);
	-webkit-transform:scale(0);
}
.b-animate-go:hover .b-scale, h1{
	transform:scale(1);
	-moz-transform:scale(1);
	-ms-transform:scale(1);
	-o-transform:scale(1);
	-webkit-transform:scale(1);
}
/*----*/
.women-top {
    float: left;
}
.img {
    float: right;
}
/*----*/
.mid-1 h6 {
    font-size: 1.2em;
    font-family: 'Ubuntu-Regular';
}
.mid-1 h6 a {
    color: #000000;
    text-decoration:none;
}
.mid-1 h6 a:hover {
    color: #F67777;
}
.mid-2 p{
	float:left;
	font-size:0.9em;
	color:#B4B4B4;
}
.mid-2 p em{
	font-style:normal;
}
.mid-2 p label{
	text-decoration: line-through;
	font-weight:400;
	margin-right:6px;
}
.mid-2 {
    padding-top: 1em;
}
.mid-1 {
    padding-top: 1em;
}
.mid-pop{
	position:relative;
	border: 1px solid #EFECEC;
    padding: 10px;
}
.zoom-icon {
	    position: absolute;
    opacity: 0;
    filter: alpha(opacity=0);
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=0)";
    display: block;
    left: 0;
    top: -152px;
    width: 290px;
    height: 219px;
	text-align:center;
    cursor: pointer;
    transition: all .2s ease-in-out;
    -webkit-transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    -o-transition: all .2s ease-in-out;
}
.zoom-icon .icon{
	width: 50px;
    height: 50px;
    display: inline-block;
    background: #f67777;
	color:#fff;
	font-size:1.3em;
    margin: 0 0.3em;
	line-height: 2.5em;
}
.zoom-icon .glyphicon-menu-right{
    background:#fff;
	color: #f67777;
}
.mid-pop .zoom-icon {
	top: 0px;
	width: 100%;
	height: 182px;
}
.mid-pop .pro-img:hover .zoom-icon {
    top: 33%;
    opacity: 1;
    filter: alpha(opacity=99);
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=99)";
}
.mid-popular {
    padding-top: 2em;
}
.brand {
    padding: 5em 0;
}
.banner-contact{
	text-align:center;
	width: 100%;
    height: 250px;
    display: block;
    background: url(../images/contact-us.jpg)no-repeat ;
	background-color: #25262a;
	padding:5em 0;
}
.banner-contact h1{
	font-size:3em;
	color:#fff;
	font-family: 'Ubuntu-Regular';
}
.banner-contact h2{
	font-size:0.9em;
	color:#fff;
	margin-top:1em;
}
.banner-contact h2 a{
	color:#f67777;
}
.banner-contact h2 label{
	margin:0 0.4em;
}
.banner-contact em {
    width: 100px;
    height: 2px;
    display: block;
    background: #fff;
    border-radius: 10px;
    margin: 0.5em auto;
}
.banner-account{
	text-align:center;
	width: 100%;
    height: 250px;
    display: block;
    background: url(../images/accounts.jpg)no-repeat ;
	padding:5em 0;
	background-color: #26211e;
}
.banner-account h1{
	font-size:3em;
	color:#fff;
	font-family: 'Ubuntu-Regular';
}
.banner-account h2{
	font-size:0.9em;
	color:#fff;
	margin-top:1em;
}
.banner-account h2 a{
	color:#f67777;
}
.banner-account h2 label{
	margin:0 0.4em;
}
.banner-account em {
    width: 100px;
    height: 2px;
    display: block;
    background: #fff;
    border-radius: 10px;
    margin: 0.5em auto;
}
.banner-top{
	text-align:center;
	width: 100%;
    height: 250px;
    display: block;
    background-color: #292626;
}
.banner-top h1{
	font-size:3em;
	color:#fff;
	font-family: 'Ubuntu-Regular';
}
.banner-top h2{
	font-size:0.9em;
	color:#fff;
	margin-top:1em;
}
.banner-top h2 a{
	color:#f67777;
}
.banner-top h2 label{
	margin:0 0.4em;
}
.banner-top em {
    width: 100px;
    height: 2px;
    display: block;
    background: #fff;
    border-radius: 10px;
    margin: 0.5em auto;
}
/*--typo-single--*/

.thumb-image > img { width: 100%; }
/*--single--*/
.single-para h1{
	font-size:1.5em;
	color:#52D0C4;
	line-height:1.5em;
	  font-family: 'OleoScript-Regular';
}
label.add-to{
	display:block;
	font-size: 2em;
	color: #000;
}
.single-para p{
	font-size:0.9em;
	color:#B2B2B2;
	line-height:1.8em;
}
a.cart{
  padding: 0.3em 0.7em;
  color: #FFF;
  background: #52D0C4;
  margin: 1.5em 0 0;
  font-size: 1em;
  display:inline-block;
  line-height: 1.6em;
  text-align: center;
  text-decoration:none;
}
a.cart:hover{
	background: #000;
}
/*----*/
.star-on {
  padding: 1em 0;
}
.star-on ul {
  float:left;
}

.star-on ul li{
	display: inline-block;
}
.star-on ul li i{
	color:#000;
}
.review{
	float:left;
	  padding: 0 1em;
}
.star-on a{
	text-decoration:none;
	font-size:1em;
	color:#52D0C4;
}
.star-on a:hover{
	color:#000;
}
.single-bottom h4{
	color:#000;
	font-size:1.5em;
	padding:0.5em;
	border-bottom:1px solid #fa7455	;
}
.single {
  padding: 5em 0 0;
}
.available h6{
	color:#52D0C4;
	font-size:1.4em;
	padding: 0 0 1em;
}
.available ul li{
	display:inline-block;
	padding:0 0.5em 0 0;
	color:#4c4c4c;
	font-size:0.9em;
}
.available ul li select {
  outline: none;
  padding: 3px;
}
.available {
  padding: 2em 0 1em;
}
/*--products--*/
.product-bottom {
    padding-top: 2em;
}
h4.cate {
    font-family: 'Ubuntu-Regular';
    font-size: 1.7em;
    color:#F67777;
}

ul.kid-menu{
	display: block !important;
}
.menu-drop {
	width: auto;
	height: auto;
	padding: 0;
	list-style: none;
	margin: 0.5em 0;	
}
.menu-drop > li > a {
	width: 100%;
  margin: 0.3em 0;
	display:inline-block;
	position: relative;
	color: #000;
	font-size: 0.9em;
	text-decoration:none;
	    font-family: 'Oxygen-Bold';
}
.menu-drop > li > a:hover{
	color:#f67777;
}
/* ... */

